@@ -5,7 +5,7 @@ use warnings;
 use File::Map qw/:map lock_map sync/;
 use IO::Handle;
 use Test::More tests => 9;
-use Test::Warnings qw/warning/;
+use Test::Warnings 0.004 qw/warning/;
 use Test::Fatal qw/lives_ok/;
 
 open my $fh, '+<:raw', undef;
